--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,5 +29,5 @@
             android:authorities="com.example.android.sqlbooks"
             android:exported="false" />
     </application>
-
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 </manifest>
